--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vocabularify",
-  "main": "expo-router/entry",
-  "version": "1.0.0",
+  "main": "app/index.js",
+  "version": "1.0.1",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -17,7 +17,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "^6.0.2",
+    "@react-native-picker/picker": "2.7.5",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.24",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -35,8 +37,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "@react-native-picker/picker": "2.7.5"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
