--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vocabularify",
   "main": "app/index.js",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "deploy": "eas submit -p ios"
   },
   "jest": {
     "preset": "jest-expo"
